Update 1. Opis przetwarzania w chmurze.md

--- a/Azure/Kursy/AZ900/1. Opis przetwarzania w chmurze.md
+++ b/Azure/Kursy/AZ900/1. Opis przetwarzania w chmurze.md
@@ -1,12 +1,16 @@
 
+- [1. Wprowadzenie do podstaw platformy Microsoft Azure](#1-wprowadzenie-do-podstaw-platformy-microsoft-azure)
+  - [1.1. Co to są podstawy platformy Azure?](#11-co-to-są-podstawy-platformy-azure)
+  - [1.2. Dlaczego warto wziąć udział w podstawach platformy Azure?](#12-dlaczego-warto-wziąć-udział-w-podstawach-platformy-azure)
 
-# Wprowadzenie do podstaw platformy Microsoft Azure
+
+# 1. Wprowadzenie do podstaw platformy Microsoft Azure
 
 Microsoft Azure to platforma do przetwarzania w chmurze z stale rozszerzającym się zestawem usług, które ułatwiają tworzenie rozwiązań spełniających cele biznesowe. Usługi platformy Azure obsługują wszystko, od prostego do złożonego. Platforma Azure ma proste usługi internetowe do hostowania twojej obecności biznesowej w chmurze. Platforma Azure obsługuje również uruchamianie w pełni zwirtualizowanych komputerów zarządzających niestandardowymi rozwiązaniami programowymi. Platforma Azure oferuje wiele usług opartych na chmurze, takich jak magazyn zdalny, hosting baz danych i scentralizowane zarządzanie kontami. Platforma Azure oferuje również nowe możliwości, takie jak sztuczna inteligencja (AI) i usługi ukierunkowane na Internet rzeczy (IoT).
 
 W tej serii omówisz podstawy przetwarzania w chmurze, poznasz niektóre podstawowe usługi udostępniane przez platformę Microsoft Azure i dowiesz się więcej o usługach zapewniania ładu i zgodności, których można używać.
 
-## Co to są podstawy platformy Azure?
+## 1.1. Co to są podstawy platformy Azure?
 
 Podstawy platformy Azure to seria trzech ścieżek szkoleniowych, które zapoznają się z platformą Azure i jej wieloma usługami i funkcjami.
 
@@ -16,7 +20,7 @@ Podstawy platformy Azure obejmują interaktywne ćwiczenia, które zapewniają p
 
 Techniczne środowisko IT nie jest wymagane; jednak posiadanie ogólnej wiedzy INFORMATYCZNEj pomoże Ci jak najlepiej wykorzystać doświadczenie w nauce.
 
-## Dlaczego warto wziąć udział w podstawach platformy Azure?
+## 1.2. Dlaczego warto wziąć udział w podstawach platformy Azure?
 
 Jeśli dopiero zaczynasz pracować z chmurą lub masz już doświadczenie w chmurze, podstawy platformy Azure udostępniają wszystko, czego potrzebujesz, aby rozpocząć pracę.
 
@@ -26,7 +30,6 @@ Niezależnie od Twoich celów podstawy platformy Azure mają coś dla Ciebie. Na
 - Chcesz uzyskać oficjalną certyfikację od firmy Microsoft (AZ-900)
 
 Seria ścieżek szkoleniowych Podstawy platformy Azure może pomóc w przygotowaniu się do egzaminu AZ-900: Podstawy platformy Microsoft Azure. Ten egzamin obejmuje trzy obszary domeny wiedzy:
-
 
 | Obszar domeny AZ-900  |  Waga |
 |---|---|
